test/bad/c_cpp/dividebyzero.cpp
#include <cstdio>
#include <cstring>

int main() {
	int t = 0;
	for (int j = 0; j < 10 ; j++) t = t * j;
	int s = 5 / t;
}
